# posty

./: .gitignore  Cargo.toml  README.md
posty/: Cargo.toml
posty/benches/: executor_throughput.rs
posty/src/: collection.rs  executor.rs  lib.rs  main.rs  requests.rs
posty/src/save/: mod.rs
posty/src/sharing/: mod.rs
posty/tests/: mod.rs
posty_config/: Cargo.toml  posty.toml
posty_config/src/: main.rs
posty_gui/: Cargo.toml
posty_gui/src/: app.rs  lib.rs  main.rs  mock.rs
posty_gui/src/components/: menu_bar.rs
posty_tui/: Cargo.toml
posty_tui/src/: TODO.md  action.rs  app.rs  app_1.rs  app_rewrite.rs  card.rs  commands.rs  editor.rs  folder.rs  form.rs  input_field.rs  key_actions.rs  lib.rs  main.rs  metrics.rs  tab_bar.rs  tabs.rs  text_editor.rs  themes.rs  widgets.rs
posty_tui/src/components/: auth.rs  headers.rs  keybind_bar.rs  mod.rs  params.rs  project_bar.rs  settings.rs  tab_view.rs  url_bar.rs
posty_tui/src/components/auth/: mod.rs
posty_tui/src/panes/: collections.rs  mod.rs  request.rs  response.rs
posty_tui/src/widget_rewrite/: dropdown.rs  input_box.rs  input_table.rs  mod.rs  toggle.rs
posty_tui/src/widgets/: commands.rs  dropdown.rs  folder.rs  form.rs  i_table.rs  input_box.rs  input_table.rs  mod.rs  response_section.rs  tab.rs  tab_bar.rs  table.rs  tabs.rs  toggle.rs  toggles.rs
