[package]
name = "posty"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
chrono = "0.4.44"
cookie = "0.18.1"
criterion = {version = "0.8.2", features = ["async_tokio", "html_reports"]}
mockito = "1.7.2"
reqwest = {version = "0.13.2", features= ["form", "query", "json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features=["full"]}

[[bench]]
name = "executor_throughput"
harness = false
